--- a/miniMIPS/miniMIPS.runs/Memory_synth_1/.vivado.begin.rst
+++ b/miniMIPS/miniMIPS.runs/Memory_synth_1/.vivado.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado" Owner="miguelan" Host="" Pid="21559" HostCore="1" HostMemory="2035480">
+    <Process Command="vivado" Owner="alu07" Host="wn-156.localdomain" Pid="16585" HostCore="2" HostMemory="7904680">
     </Process>
 </ProcessHandle>
